# 2_rag

./: README.md
backend/: __init__.py  main.py  pyproject.toml
backend/data_ingestion/: data_ingest.py
backend/db/: dbo.py  models.py
backend/fast_api_app/: dependencies.py
backend/fast_api_app/router/: chat.py  log_decorator.py  sessions.py  user.py
backend/rag/: rag.py
backend/schema/: schemas.py
backend/utils/: constants.py  utils.py
frontend/src/: App.css  App.tsx
