[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi>=0.116.1",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.29",
    "langchain-core>=0.3.75",
    "langchain-ollama>=0.3.7",
    "pdfplumber>=0.11.7",
    "pypdf>=6.0.0",
    "sqlalchemy>=2.0.43",
    "transformers>=4.56.0",
]
